spacing fixes

--- a/css/feature-responsive.css
+++ b/css/feature-responsive.css
@@ -487,16 +487,16 @@
 		margin-left: 0px;
 		margin-top: 10px;
 	}
-	.custom-navbar.navbar-default .navbar-nav > li {
+	/*.custom-navbar.navbar-default .navbar-nav > li {
 		margin-left: 0;
 		margin-right:1px;
-	}
-	.custom-navbar.navbar-default .navbar-nav > li > a {
+	}*/
+	/*.custom-navbar.navbar-default .navbar-nav > li > a {
 		font-size: 12px;
 		color: #62696d;
 		text-transform: uppercase;
 		padding:7px;
-	}
+	}*/
 }
 @media (min-width:769px) and (max-width:990px){
 	#feature .rs-hide{
